// This is your Prisma schema file
// Context: Plateforme de Fact-Checking (Mali) - Architecture DDD
// Version alignée sur le diagramme de classes validé

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

// ==========================================
// DOMAIN ENUMS
// ==========================================

// Rôles utilisateur dans le système
enum Role {
  ADMIN
  JOURNALIST
  CITIZEN
}

// Statut d'un compte utilisateur
enum UserStatus {
  ACTIVE // Compte actif
  DISABLED // Compte désactivé par l'admin
  BANNED // Compte banni définitivement
  REGULAR // Citoyen standard (non vigie)
  WATCHER // Citoyen avec rôle de vigie (peut soumettre des preuves)
}

// Statut d'un signalement (report)
enum ReportStatus {
  OPEN // Dans l'inbox commune, non assigné
  IN_PROGRESS // Assigné à un journaliste
  PENDING_REVIEW // Draft soumis à validation admin
  NEEDS_REVISION // Rejeté avec feedback, nécessite correction
  PUBLISHED // Validé et publié
  UNVERIFIABLE // Impossible à vérifier, archivé
}

enum WatcherApplicationStatus {
  PENDING // Candidature en attente de décision
  APPROVED // Candidature approuvée, devient vigie
  REJECTED // Candidature rejetée
}

// Verdict d'une analyse
enum Verdict {
  TRUE // Information confirmée vraie
  FALSE // Information fausse/démentie
  MISLEADING // Information trompeuse (mix de vrai/faux)
  UNVERIFIABLE // Impossible de vérifier faute de sources
}

// Type de média fourni par le citoyen dans son signalement
// Permet de prioriser le traitement (ex: AUDIO = WhatsApp, priorité 1 au Mali)
enum MediaType {
  AUDIO // Notes vocales WhatsApp (Priorité 1 au Mali)
  LINK // Lien URL (Facebook, X, TikTok, sites web)
  TEXT // Copie de message texte (ex: capture d'écran transcrite)
  IMAGE // Photo de preuve
  VIDEO // Vidéo courte
}

// Catégorisation médiatique par le journaliste pendant l'analyse
// Basée sur la méthodologie de fact-checking
enum MediaCategory {
  CONTEXT_COLLAPSE // "Contenu sorti de son contexte" : Image vraie, mais lieu/date faux.
  MANIPULATED // "Contenu manipulé" : Montage, retouche Photoshop, altération.
  FABRICATED // "Contenu fabriqué" : Pure invention, Deepfake (Audio ou Vidéo).
  SATIRE // "Satire / Parodie" : Humour pris au premier degré par erreur.
  MISLEADING // "Contenu trompeur" : Utilisation de faits réels pour induire en erreur.
  IMPOSTOR // "Contenu imposteur" : Usurpation d'identité (ex: faux logo ORTM).
  OTHER // "Autre" : Oblige le journaliste à ajouter un détail.
}

// ==========================================
// USER MODEL (IDENTITY)
// ==========================================

model User {
  id                 String     @id @default(uuid())
  email              String     @unique
  role               Role       @default(CITIZEN)
  status             UserStatus @default(ACTIVE)
  engagement_score   Int        @default(0) // Score de participation (pour les watchers)
  last_read_inbox_at DateTime   @default(now()) // Dernière lecture de l'inbox
  created_at         DateTime   @default(now())

  // Relations
  reports             Report[]            @relation("CitizenReports") // Signalements soumis
  analyses            Analysis[]          @relation("JournalistAnalyses") // Analyses rédigées
  publications        Publication[]       @relation("AdminApprovals") // Publications approuvées
  watcher_application WatcherApplication? // Candidature watcher
  notifications       Notification[] // Notifications reçues
  created_subjects    InboxSubject[]      @relation("Creator") // Sujets d'inbox créés
  evidence_items      WatcherEvidence[] // Preuves soumises (si watcher)

  @@map("users")
}

// ==========================================
// CORE MODELS (EDITORIAL)
// ==========================================

// Signalement soumis par un citoyen
model Report {
  id         String       @id @default(uuid())
  status     ReportStatus @default(OPEN)
  content    String       @db.Text // Contenu textuel du signalement
  media_url  String? // URL du média associé
  media_type MediaType    @default(TEXT) // Type de média fourni
  created_at DateTime     @default(now())

  citizen_id String
  citizen    User   @relation("CitizenReports", fields: [citizen_id], references: [id])

  analysis Analysis? // Une analyse peut être liée

  @@map("reports")
}

// Analyse rédigée par un journaliste
model Analysis {
  id        String @id @default(uuid())
  report_id String @unique // Un signalement = une analyse
  report    Report @relation(fields: [report_id], references: [id], onDelete: Cascade)

  journalist_id String
  journalist    User   @relation("JournalistAnalyses", fields: [journalist_id], references: [id])

  media_category      MediaCategory? // Catégorisation par le journaliste
  draft_verdict       Verdict        @default(UNVERIFIABLE)
  investigation_notes String         @db.Text // Notes d'enquête détaillées

  // Revision loop (from class diagram)
  current_rejection_reason String? @db.Text // Motif du dernier rejet
  attempt_count            Int     @default(0) // Nombre de tentatives (max 1000 anti-DoS)

  created_at DateTime @default(now())
  updated_at DateTime @updatedAt

  publication    Publication?
  evidence_items WatcherEvidence[] // Preuves soumises par les watchers

  @@map("analyses")
}

// Preuve soumise par un citoyen watcher
model WatcherEvidence {
  id              String   @id @default(uuid())
  analysis_id     String
  analysis        Analysis @relation(fields: [analysis_id], references: [id], onDelete: Cascade)
  watcher_id      String // ID du citoyen watcher
  watcher         User     @relation(fields: [watcher_id], references: [id])
  artifact        String   @db.Text // Description ou contenu textuel
  file_url        String? // URL du fichier joint
  submission_date DateTime @default(now())

  @@map("watcher_evidence")
}

// Publication finale validée par l'admin
model Publication {
  id          String   @id @default(uuid())
  analysis_id String   @unique // Une analyse = une publication
  analysis    Analysis @relation(fields: [analysis_id], references: [id], onDelete: Cascade)

  approved_by_id String
  approver       User   @relation("AdminApprovals", fields: [approved_by_id], references: [id])

  final_verdict    String   @db.Text // Verdict final textuel
  publication_date DateTime @default(now())
  is_correction    Boolean  @default(false) // True si c'est un correctif

  notifications Notification[] // Notifications générées

  @@map("publications")
}

// ==========================================
// WATCHER APPLICATION MODEL
// ==========================================

// Candidature d'un citoyen pour devenir watcher
model WatcherApplication {
  id         String                   @id @default(uuid())
  user_id    String                   @unique
  user       User                     @relation(fields: [user_id], references: [id])
  motivation String                   @db.Text // Motivation du candidat
  status     WatcherApplicationStatus @default(PENDING) // PENDING, APPROVED, REJECTED,
  created_at DateTime                 @default(now())

  @@map("watcher_applications")
}

// ==========================================
// INBOX SUBJECTS & NOTIFICATIONS
// ==========================================

// Sujets disponibles dans l'inbox (pour orienter les journalistes)
model InboxSubject {
  id            String   @id @default(uuid())
  theme         String // Thème du sujet
  description   String   @db.Text // Description détaillée
  created_by_id String // Admin qui a créé le sujet
  created_by    User     @relation("Creator", fields: [created_by_id], references: [id])
  created_at    DateTime @default(now())

  @@map("inbox_subjects")
}

// Notification envoyée aux citoyens
model Notification {
  id             String       @id @default(uuid())
  citizen_id     String
  citizen        User         @relation(fields: [citizen_id], references: [id])
  message        String       @db.Text // Contenu de la notification
  is_read        Boolean      @default(false)
  creation_date  DateTime     @default(now())
  publication_id String? // Liée à une publication (optionnel)
  publication    Publication? @relation(fields: [publication_id], references: [id])

  @@map("notifications")
}
