@startuml
skinparam handwritten false
skinparam shadowless true
skinparam defaultFontName "Arial"
skinparam RoundCorner 10

!define ENTITY_COLOR #E1F5FE
!define AGGREGATE_COLOR #F3E5F5
!define VALUE_OBJECT_COLOR #FFF3E0

note "Simplified Domain Architecture\nFocus on essential business concepts" as N1

' ==========================================
' MAIN ENTITIES
' ==========================================

class "Actor" as Actor {
  -id: string
  -name: string
  -email: string
  -role: Role
  -status: Status
  --
  +isActive()
  +canLogin()
}

class "Citizen" as Citizen {
  -engagementScore: int
  -openReportsCount: int
  --
  +canSubmitReport()
  +submitReport()
  +submitEvidence()
  +applyForWatcher()
}

class "Journalist" as Journalist {
  -activeInvestigationsCount: int
  --
  +canAnalyze()
  +pickReport()
  +submitInvestigation()
  +correctInvestigation()
}

class "Director" as Director {
  --
  +validateInvestigation()
  +rejectInvestigation()
  +publishInvestigation()
  +manageUsers()
  +manageInbox()
}

class "Report" as Report {
  -theme: string
  -title: string
  -content: string
  -status: ReportStatus
  --
  +canBePicked()
  +changeStatus()
}

class "Investigation" as Investigation {
  -mediaCategory: MediaCategory
  -draftVerdict: Verdict
  -investigationNotes: string
  -status: InvestigationStatus
  --
  +submitForReview()
  +approve()
  +requestRevision()
}

class "Evidence" as Evidence {
  -content: string
  -title: string
  --
  +submittedByWatcher()
}

class "Publication" as Publication {
  -finalVerdict: Verdict
  -publishedAt: DateTime
  -isCorrection: Boolean
  --
  +generateNotifications()
}

class "Notification" as Notification {
  -type: NotificationType
  -message: string
  -isActive: Boolean
  --
  +sendToActor()
}

class "InboxSubject" as InboxSubject {
  -theme: string
  -description: string
  -status: InboxSubjectStatus
  --
  +archive()
}

class "WatcherApplication" as WatcherApplication {
  -status: ApplicationStatus
  --
  +approve()
  +reject()
}

class "AuthoritySource" as AuthoritySource {
  -name: string
  -type: SourceType
  --
  +provideVerification()
}

' ==========================================
' RELATIONS
' ==========================================

' Inheritance
Actor <|-- Citizen
Actor <|-- Journalist  
Actor <|-- Director

' Main flow
Citizen "1" -- "0..*" Report : "submits" >
Report "1" -- "0..1" Investigation : "becomes" >
Journalist "1" -- "0..*" Investigation : "conducts" >
Investigation "1" -- "0..*" Evidence : "contains" >
Evidence "0..*" -- "1" Citizen : "provided by" >

' Publication and notification
Investigation "1" -- "0..1" Publication : "produces" >
Publication "1" -- "0..*" Notification : "generates" >
Notification "0..*" -- "1" Actor : "sent to" >

' Verification
Publication "1" -- "0..*" AuthoritySource : "verified by" >

' Management
Director "1" -- "0..*" Investigation : "validates" >
Director "1" -- "0..*" InboxSubject : "manages" >
Citizen "1" -- "0..1" WatcherApplication : "applies for" >
Director "1" -- "0..*" WatcherApplication : "processes" >

@enduml
